# ChatApp

./: .gitignore  docker-compose.yml  gateway.py  pyproject.toml  worker.py
src/: config.py  kafka.py  models.py  redis.py
tests/: test_integration.py
