[project]
name = "chatapp"
version = "0.1.0"
description = "Basic chat app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.13.0",
    "fastapi[standard]>=0.128.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
